fix navbar collapse mobile & small

--- a/assets/css/scrollbar.css
+++ b/assets/css/scrollbar.css
@@ -1,6 +1,13 @@
 .scrollable {
-  height: 95vh;
+  height: 100vh;
   overflow-y: auto;
+}
+
+@media (min-width: 768px) {
+  .scrollable {
+    height: 95vh;
+    overflow-y: auto;
+  }
 }
 
 .scrollable2 {
